syntax = "proto3";
package quirks.v1;
import "lib.proto";

option go_package = "internal/api/v1";

message SumStringsRequest {
    string a = 1;
    string b = 2;
}

message SumStringsResponse {
    string result = 1;
}

// Test unusual things
service Quirks {
    rpc MethodWithAReallyLongNameGmthggupcbmnphflnnvu(Void) returns(Message);
    // Concatenates two strings
    rpc Sum(SumStringsRequest) returns(SumStringsResponse);
}

// Second service in the same file
service quirks_2 {
    rpc camelCaseMethod(Void) returns(Void);
}
